--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
   <head>
     <title>Geolocation</title>
        <!--Import Google Icon Font-->
-   <!-- <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-      <!-- Import materialize.css-->
-    <!--<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"> -->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+    <link href="css/cStyles.css" rel="stylesheet">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+ 
   </head>
   <body>
     <div id="map"></div>
-    <script type="text/javascript" src="js/cMap.js"></script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC93xr8tXeNU2M4s5xXpz0GTkOuLQElJF0&callback=initMap">
+    <script src="js/cMap.js"> </script>
+    <script 
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC93xr8tXeNU2M4s5xXpz0GTkOuLQElJF0&callback=initMap" async defer>
     </script>
-    
-    <!--<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script> -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      
   </body>
 </html>
