--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
        <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
+       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link href="css/cStyles.css" rel="stylesheet">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
  
   </head>
   <body>
+
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Logo</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">JavaScript</a></li>
+      </ul>
+    </div>
+  </nav>
     <div id="map"></div>
     <script>
       // Note: This example requires that you consent to location sharing when
@@ -56,6 +68,6 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC93xr8tXeNU2M4s5xXpz0GTkOuLQElJF0&callback=initMap" async defer>
     </script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      
+      <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
 </html>
