--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
       <div class="row">
             <div class="input-field col s6">
-              <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-              <label for="first_name">First Name</label>
+              <input placeholder="Let's Go Shoppng!" id="first_name" type="text" class="validate">
+              
             </div>
       </div>
 
