--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </nav>
 
       <div class="row">
-            <div class="input-field col s6">
-              <input placeholder="Let's Go Shoppng!" id="first_name" type="text" class="validate">
+            <div class="input-field col s3">
+              <input placeholder="Let's Go Shopping!" id="first_name" type="text" class="validate">
               
             </div>
       </div>
