--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
 
       <div class="row">
-            <div class="input-field col s3">
+            <div class="input-field col s4 offset-s5">
               <input placeholder="Let's Go Shopping!" id="first_name" type="text" class="validate">
               
             </div>
