--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <nav>
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo-center">COMKET</a>
+          <a href="#" class="brand-logo center"><h3>COMKET</h3></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
           
           </ul>
