--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div class="row">
             <div class="input-field col s6 offset-s3">
-              <input placeholder="Let's Go Shopping!" id="first_name" type="text" class="validate">
+              <input placeholder="Let's Go Shopping!" id="autocomplete-input" class="autocomplete">
               
             </div>
       </div>
@@ -76,6 +76,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC93xr8tXeNU2M4s5xXpz0GTkOuLQElJF0&callback=initMap" async defer>
     </script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/cMap.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
 </html>
