--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
           </ul>
         </div>
       </nav>
+        <div class="row">
+    <div class="col s12">
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">textsms</i>
+          <input type="text" id="autocomplete-input" class="autocomplete">
+          <label for="autocomplete-input">Autocomplete</label>
+        </div>
+      </div>
+    </div>
+  </div>
 
       <div class="row">
             <div class="input-field col s6 offset-s3">
