--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <div class="row">
             <div class="input-field col s6 offset-s3">
-              <input placeholder="Let's Go Shopping!" id="autocomplete-input" class="autocomplete"/>
+              <input placeholder="Let's Go Shopping!" id="item"/>
               
             </div>
       </div>
