--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="row">
             <div class="input-field col s6 offset-s3">
               <input placeholder="Let's Go Shopping!" id="item"/>
-              
+              <a class="waves-effect waves-light btn">Shop</a>
             </div>
       </div>
 
