--- a/index.html
+++ b/index.html
@@ -31,10 +31,20 @@
       <div class="row">
             <div class="input-field col s6 offset-s3">
               <input placeholder="Let's Go Shopping!" id="item"/>
-              <a id="shop" class="waves-effect waves-light btn">Shop</a>
+              <a id="shop" class="waves-effect waves-light btn" href=#modal1>Shop</a>
             </div>
       </div>
 
+ <!-- Modal Structure -->
+  <div id="modal1" class="modal bottom-sheet">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
         <div id="map"></div>
 
     <script>
