--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link href="css/cStyles.css" rel="stylesheet">
      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/3.5.0/firebase.js"></script>
          
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script type="text/javascript" src="js/cMap.js"></script>
