--- a/index.html
+++ b/index.html
@@ -56,8 +56,34 @@
           center: {lat: -34.397, lng: 150.644},
           zoom: 15
         });
-        //var infoWindow = new google.maps.InfoWindow({map: map});
-        var marker = new google.maps.Marker({map: map});
+        var infoWindow = new google.maps.InfoWindow();
+            var service = new google.maps.places.PlacesService(map);
+        service.nearbySearch({
+          location: pyrmont,
+          radius: 500,
+          type: ['store']
+        }, callback);
+      }
+
+      function callback(results, status) {
+        if (status === google.maps.places.PlacesServiceStatus.OK) {
+          for (var i = 0; i < results.length; i++) {
+            createMarker(results[i]);
+          }
+        }
+      }
+       function createMarker(place) {
+        var placeLoc = place.geometry.location;
+        var marker = new google.maps.Marker({
+          map: map,
+          position: place.geometry.location
+        });
+
+        google.maps.event.addListener(marker, 'click', function() {
+          infowindow.setContent(place.name);
+          infowindow.open(map, this);
+        });
+        var marker1 = new google.maps.Marker({map: map});
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position) {
@@ -66,7 +92,7 @@
               lng: position.coords.longitude
             };
 
-            marker.setPosition(pos);
+            marker1.setPosition(pos);
             
             map.setCenter(pos);
           }, function() {
@@ -86,7 +112,7 @@
       }
     </script>
     <script 
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC93xr8tXeNU2M4s5xXpz0GTkOuLQElJF0&callback=initMap" async defer>
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC93xr8tXeNU2M4s5xXpz0GTkOuLQElJF0&libraries=places&callback=initMap" async defer>
     </script>
 
   </body>
