--- a/index.html
+++ b/index.html
@@ -52,8 +52,27 @@
     <script>
 
       function initMap() {
+        var marker1 = new google.maps.Marker({map: map});
+         if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+
+            marker1.setPosition(pos);
+            
+            map.setCenter(pos);
+          }, function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+      }
         var map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
+          center: {lat: position.coords.latitude, lng: position.coords.longitude},
           zoom: 15
         });
         var infoWindow = new google.maps.InfoWindow();
@@ -79,13 +98,13 @@
           position: place.geometry.location
         });
 
-        google.maps.event.addListener(marker, 'click', function() {
+      /*  google.maps.event.addListener(marker, 'click', function() {
           infowindow.setContent(place.name);
           infowindow.open(map, this);
-        });
-        var marker1 = new google.maps.Marker({map: map});
+        });*/
+        
         // Try HTML5 geolocation.
-        if (navigator.geolocation) {
+       /* if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position) {
             var pos = {
               lat: position.coords.latitude,
@@ -102,7 +121,7 @@
           // Browser doesn't support Geolocation
           handleLocationError(false, infoWindow, map.getCenter());
         }
-      }
+      }*/
 
       function handleLocationError(browserHasGeolocation, infoWindow, pos) {
         infoWindow.setPosition(pos);
