--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           center: {lat: lati, lng: lon},
           zoom: 15
         });
-        var infoWindow = new google.maps.InfoWindow();
+     /*   var infoWindow = new google.maps.InfoWindow();
             var service = new google.maps.places.PlacesService(map);
         service.nearbySearch({
           location: pyrmont,
@@ -101,7 +101,7 @@
         var marker = new google.maps.Marker({
           map: map,
           position: place.geometry.location
-        });
+        });*/
 
       /*  google.maps.event.addListener(marker, 'click', function() {
           infowindow.setContent(place.name);
