--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         service.nearbySearch({
           location: pos,
           radius: 5000,
-          type: ['hospital']
+          type: ['store']
         }, callback);
       }
 
