--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
   <!--Script that generates a map at user current location -->
     <script>
-
+    var map;
       function initMap() {
-        var map = new google.maps.Map(document.getElementById('map'), {
+        map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: -34.397, lng: 150.644},
           zoom: 15
         });
