--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <!--Script that generates a map at user current location -->
     <script>
     var map;
+    var pos;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: -34.397, lng: 150.644},
@@ -117,7 +118,7 @@
     <script 
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC93xr8tXeNU2M4s5xXpz0GTkOuLQElJF0&libraries=places&callback=initMap" async defer>
     </script>
-    
+
 
   </body>
 </html>
