--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         service.nearbySearch({
           location: pos,
           radius: 5000,
-          types: ['hospital']
+          types: ['store']
         }, callback);
       }
 
