--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             };
 
             marker.setPosition(pos);
-            marker.setContent("I'm Here!");
+  
             map.setCenter(pos);
           }, function() {
             handleLocationError(true, infoWindow, map.getCenter());
@@ -82,7 +82,7 @@
         service.nearbySearch({
           location: pos,
           radius: 5000,
-          types: ['store']
+          types: ['hospital']
         }, callback);
       }
 
