--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
+             pos = {
               lat: position.coords.latitude,
               lng: position.coords.longitude
             };
