Adding search for POI

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         service.nearbySearch({
           location: pos,
           radius: 5000,
-          types: ['school']
+          types: ['store']
         }, callback);
-        
+
             marker.setPosition(pos);
             
             map.setCenter(pos);
