--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         service.nearbySearch({
           location: pos,
           radius: 5000,
-          types: ['store']
+          types: ['convenience_store']
         }, callback);
 
             marker.setPosition(pos);
