Adding search for POI

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         service.nearbySearch({
           location: pos,
           radius: 5000,
-          types: ['home_goods_store']
+          types: ['grocery_or_supermarket']
         }, callback);
 
             marker.setPosition(pos);
