displaying results from search

--- a/index.html
+++ b/index.html
@@ -39,8 +39,22 @@
  <!-- Modal Structure -->
       <div id="modal1" class="modal bottom-sheet">
         <div class="modal-content">
-          <h4 class="info"></h4>
-          <p></p>
+          <div class="col s12 m7">
+    <h2 class="header">Grocery Items</h2>
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="http://lorempixel.com/100/190/nature/6">
+      </div>
+      <div class="card-stacked">
+        <div class="card-content">
+          <p class="info"></p>
+        </div>
+        <div class="card-action">
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
         </div>
         <div class="modal-footer">
           <a class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
