--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
  <!-- Modal Structure -->
       <div id="modal1" class="modal bottom-sheet">
         <div class="modal-content">
-          <div class="col s12 m7">
+          <div id = "duplicate" class="col s12 m7">
     <h2 class="header">Grocery Items</h2>
     <div class="card horizontal">
       <div class="card-image">
