displaying results from search

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <div class="card-stacked">
         <div class="card-content">
           <p class="info"></p>
+          <p class="info1"></p>
         </div>
         <div class="card-action">
           <a href="#">This is a link</a>
