adding template and get data

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <!-- Side Menu that will house the items added to cart -->
       <ul id="slide-out" class="side-nav">
-        <li><div class="userView">
+        <li><div class="userView"><a href=""><i class="material-icons ic">trending_flat</i></a>
           
           <a href="#!user"><img class="circle" src="images/yuna.jpg"></a>
           <a href="#!name"><span class="white-text name">John Doe</span></a>
