adding template and get data

--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
 
   <!-- Side Menu that will house the items added to cart -->
       <ul id="slide-out" class="side-nav">
-        <li><div class="userView"><a href=""><i class="material-icons ic">trending_flat</i></a>
-          
-          <a href="#!user"><img class="circle" src="images/yuna.jpg"></a>
+        <li><div class="userView">          
+          <a href=""><img class="circle" src="images/close.png"></a>
           <a href="#!name"><span class="white-text name">John Doe</span></a>
           <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
         </div></li>
