adding template and get data

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         });
 
         google.maps.event.addListener(marker, 'click', function() {
-          infoWindow.setContent(place.name);
+          infoWindow.setContent("Store");
           infoWindow.open(map, this);
         });
       }
