adding template and get data

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   <p><img src="images/{{x.name}}.png"></p>
              <!--      <p>Product:{{x.product}}</p>
                   <p>Brand:{{x.brand}}</p> -->
-                  <p>{{x.price}}</p>
+                  <p class="price">{{x.price}} fi wi {{x.product}}</p>
                 </div>
                 <div class="card-action">
                   <a href="" ng-click="addToCart(x.name,x.product,x.brand,x.price)">Add To Cart</a>
